RestaurantService/Registre-deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant
  template:
    metadata:
      labels:
        app: restaurant
    spec:
      containers:
      - name: restaurant
        image: efrei/restaurant:1
