RestaurantService/Registre-service.yml
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
spec:
  ports:
  - name: http
    targetPort: 8081
    port: 80
  selector:
    app: restaurant
