RestaurantService/Registre-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: Restaurant-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: restaurant.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: restaurant
          servicePort: http
